优化批量账户导入功能，新增导入已验证账户的接口，支持直接保存账户凭证，提升性能。更新README文档以反映新特性和版本信息。

--- a/static/index.html
+++ b/static/index.html
@@ -1757,7 +1757,7 @@
                 importBtn.innerHTML = '<div class="spinner spinner-sm"></div>导入中...';
                 importBtn.disabled = true;
                 
-                const response = await makeRequest(`${API_BASE}/accounts`, {
+                const response = await makeRequest(`${API_BASE}/accounts/import`, {
                     method: 'POST',
                     body: JSON.stringify(accounts)
                 });
